# OCR-reader

./: README.md  orc.py  pyproject.toml
